--- a/.editorconfig
+++ b/.editorconfig
@@ -15,3 +15,9 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 indent_style = tab
 indent_size = 4
+
+[*.{pro,pri}]
+trim_trailing_whitespace = true
+insert_final_newline = true
+indent_style = space
+indent_size = 4
