--- a/.editorconfig
+++ b/.editorconfig
@@ -4,7 +4,7 @@ root = true
 end_of_line = lf
 charset = utf-8
 
-[*.{c,ccp,h}]
+[*.{c,cc,cxx,c++,cpp,h}]
 trim_trailing_whitespace = true
 insert_final_newline = true
 indent_style = tab
