Added qmake for profiling

--- a/src/Makefile
+++ b/src/Makefile
@@ -26,9 +26,10 @@ doc:
 run: gui
 	cd $(BUILD_DIR) && $(BUILD_DIR)$(APP_SUBDIR)$(APP_EXEC)
 
-# TODO
 profile:
-	@echo "Not implemented!"
+	cd $(BUILD_DIR) && qmake ../src/stddev.pro && time make || (printf "\n\033[0;31mBUILD FAILED!\033[0m\n"; false)
+	@echo
+	@printf "\u001b[32mTests build successful (in $(BUILD_DIR)$(TEST_SUBDIR))\u001b[0m\n"
 
 mathtest:
 	cd $(BUILD_DIR) && qmake ../src/tests.pro && time make || (printf "\n\033[0;31mBUILD FAILED!\033[0m\n"; false)
